CSS: Fixed some more text overflow issues

--- a/css/content.less
+++ b/css/content.less
@@ -228,6 +228,8 @@
 		
 		h1:first-of-type {
 			margin-top: 0;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 		
 		// Speech bubble
