--- a/css/content_user.less
+++ b/css/content_user.less
@@ -14,6 +14,10 @@
 .userContentEditor {
 	line-height: 1.5;
 	
+	> h1, p, div {
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
 	h1 {
 		font-size: 1.4em;
 		line-height: 1.4;
